--- a/src/components/ChessPlayer/ChessPlayerComponent.css
+++ b/src/components/ChessPlayer/ChessPlayerComponent.css
@@ -22,6 +22,10 @@
     flex-direction: column;
 }
 
+.chess-centered {
+    justify-content: center;
+}
+
 .chess-border-theme {
     border-width: var(--chess-player-header-border);
     border-style: solid;
@@ -40,6 +44,22 @@
     justify-content: center;
 }
 
+@keyframes rotate {
+    from {
+        transform: rotate(0turn);
+    }
+    to {
+        transform: rotate(1turn);
+    }
+}
+
+.chess-player-loading {
+    background-color: var(--chess-color-upleft);
+    border: var(--chess-player-header-border) solid var(--chess-color-downright);
+    border-radius: var(--chess-player-header-border);
+    animation: 1s linear 0s infinite normal none running rotate;
+}
+
 .chess-player-content {
     flex-grow: 1;
     display: flex;
@@ -50,7 +70,7 @@
     border-radius: var(--chess-player-header-border);
 }
 
-.chess-player-last-seen {
+.chess-detail-standout {
     font-size: 24px;
     font-weight: bold;
 }
