Trying to get cards to inline but weird bug

--- a/src/components/ChessPlayer/ChessPlayerComponent.css
+++ b/src/components/ChessPlayer/ChessPlayerComponent.css
@@ -22,6 +22,10 @@
     flex-direction: column;
 }
 
+.chess-panel .chess-player-card {
+    display: inline-flex;
+}
+
 .chess-centered {
     justify-content: center;
 }
