--- a/src/components/ChessPlayer/ChessPlayerComponent.css
+++ b/src/components/ChessPlayer/ChessPlayerComponent.css
@@ -70,6 +70,7 @@
     flex-grow: 1;
     display: flex;
     flex-direction: column;
+    align-items: center;
     justify-content: space-evenly;
     background-color: var(--chess-color-upleft);
     border: var(--chess-player-header-border) solid var(--chess-color-downright);
