--- a/src/components/ChessPanel/ChessPanelComponent.css
+++ b/src/components/ChessPanel/ChessPanelComponent.css
@@ -81,13 +81,13 @@
 
 .chess-player-card-active {
     transition-delay: 0.5s;
-    transform: scaleX(1);
+    transform: none;
     transition-timing-function: ease-out;
 }
 
 .chess-player-card-last-active {
     transition-delay: 0s;
-    transform: scaleX(0);
+    transform: rotate(45deg) rotateX(90deg);
     transition-timing-function: ease-in;
 }
 
