--- a/src/components/ChessPanel/ChessPanelComponent.css
+++ b/src/components/ChessPanel/ChessPanelComponent.css
@@ -194,7 +194,13 @@
     display: grid;
     grid-template-rows: repeat(6, 1fr);
     grid-template-columns: repeat(4, 1fr);
-    grid-template-areas: ". header-white header-black .";
+    grid-template-areas:
+    ". header-white header-black ."
+    "main main main main"
+    "main main main main"
+    "main main main main"
+    "main main main main"
+    "main main main main";
 }
 
 .chess-lastgame-header-white {
@@ -205,4 +211,11 @@
 .chess-lastgame-header-black {
     grid-area: header-black;
     background-color: black;
+}
+
+.chess-lastgame-main {
+    grid-area: main;
+    display: grid;
+    grid-template-rows: repeat(5, 1fr);
+    grid-template-columns: repeat(4, 1fr);
 }
