--- a/src/components/ChessPanel/ChessPanelComponent.css
+++ b/src/components/ChessPanel/ChessPanelComponent.css
@@ -170,17 +170,17 @@
     font-weight: bold;
 }
 
-.chess-result-marker.win::before {
+.chess-result-win::before {
     content: "\2714";
     color: #008800;
 }
 
-.chess-result-marker.draw::before {
+.chess-result-draw::before {
     content: "\23AF";
     color: #444444
 }
 
-.chess-result-marker.lose::before {
+.chess-result-lose::before {
     content: "\2716";
     color: #880000;
 }
@@ -192,10 +192,11 @@
 .chess-lastgame-grid {
     height: 100%;
     display: grid;
-    grid-template-rows: repeat(6, 1fr);
+    grid-template-rows: repeat(7, 1fr);
     grid-template-columns: repeat(4, 1fr);
     grid-template-areas:
-    ". header-white header-black ."
+    ". white black ."
+    "main main main main"
     "main main main main"
     "main main main main"
     "main main main main"
@@ -204,12 +205,12 @@
 }
 
 .chess-lastgame-header-white {
-    grid-area: header-white;
+    grid-area: white;
     background-color: white;
 }
 
 .chess-lastgame-header-black {
-    grid-area: header-black;
+    grid-area: black;
     background-color: black;
 }
 
