--- a/src/components/ChessPanel/ChessPanelComponent.css
+++ b/src/components/ChessPanel/ChessPanelComponent.css
@@ -102,8 +102,6 @@
 }
 
 .chess-player-header {
-    font-weight: bold;
-    font-size: 24px;
     padding: 5px 0;
 }
 
@@ -160,7 +158,7 @@
     }
 }
 
-.chess-time-difference {
+.chess-header-text {
     font-size: 24px;
     font-weight: bold;
 }
@@ -207,11 +205,15 @@
 .chess-lastgame-header-white {
     grid-area: white;
     background-color: white;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
 }
 
 .chess-lastgame-header-black {
     grid-area: black;
     background-color: black;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
 }
 
 .chess-lastgame-main {
@@ -219,4 +221,5 @@
     display: grid;
     grid-template-rows: repeat(5, 1fr);
     grid-template-columns: repeat(4, 1fr);
+    align-items: center;
 }
